--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -2,6 +2,87 @@
 @import "_fonts";
 @import "_constants";
 
+.header {
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  background-color: var(--first-color);
+}
 
+.nav {
+  height: var(--header-height);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  &__logo,
+  &__toggle {
+    color: #fff;
+    cursor: pointer;
+  }
+
+  &__logo {
+    font-weight: var(--font-semi-bold);
+  }
+
+  &__toggle {
+    font-size: 1.2rem;
+  }
+
+  &__menu {
+    position: relative;
+  }
+
+  &__list {
+    display: flex;
+    flex-direction: column;
+    row-gap: 2.5rem;
+  }
+
+  &__link {
+    color: var(--text-color-light);
+    font-weight: var(--font-semi-bold);
+    text-transform: uppercase;
+  }
+
+  &__link {
+    color: var(--text-color);
+  }
+
+  &__close {
+    position: absolute;
+    top: 0.75rem;
+    right: 1rem;
+    font-size: 1.5rem;
+    color: var(--title-color);
+    cursor: pointer;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .nav {
+    &__menu {
+      position: fixed;
+      background-color: var(--body-color);
+      top: 0;
+      right: -100%;
+      width: 70%;
+      height: 100%;
+      box-shadow: -1px 0 4px hsla(190, 64%, 15%, 0.15);
+      padding: 3rem;
+      transition: 0.4s;
+    }
+  }
+}
+
+/* SHOW MENU */
+
+.show-menu {
+  right: 0;
+}
+
+/*-----------*/
 
 // 18:32
