--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -2,13 +2,36 @@
 @import "_fonts";
 @import "_constants";
 
+.container {
+  max-width: 968px;
+  margin-left: var(--mb-1);
+  margin-right: var(--mb-1);
+}
+
+.grid {
+  display: grid;
+  gap: 1.5rem;
+}
+
+.section {
+  padding: 4.5rem 0 2.5rem;
+}
+
+.section__title {
+  font-size: var(--h2-font-size);
+  color: var(--title-color);
+  text-align: center;
+  text-transform: capitalize;
+  margin-bottom: var(--mb-2);
+}
+
 .header {
   width: 100%;
   position: fixed;
   top: 0;
   left: 0;
   z-index: 1;
-  background-color: var(--first-color);
+  background-color: transparent;
 }
 
 .nav {
@@ -16,6 +39,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  height: 50px;
 
   &__logo,
   &__toggle {
@@ -24,10 +48,12 @@
   }
 
   &__logo {
+    font-size: 20px;
     font-weight: var(--font-semi-bold);
   }
 
   &__toggle {
+    display: block;
     font-size: 1.2rem;
   }
 
@@ -37,32 +63,39 @@
 
   &__list {
     display: flex;
-    flex-direction: column;
-    row-gap: 2.5rem;
+    display: none;
+  }
+
+  &__item {
+    margin-left: 35px;
   }
 
   &__link {
-    color: var(--text-color-light);
-    font-weight: var(--font-semi-bold);
     text-transform: uppercase;
   }
 
   &__link {
-    color: var(--text-color);
+    color: #fff;
   }
 
   &__close {
-    position: absolute;
-    top: 0.75rem;
-    right: 1rem;
-    font-size: 1.5rem;
-    color: var(--title-color);
-    cursor: pointer;
+    display: none;
   }
 }
 
 @media screen and (max-width: 767px) {
   .nav {
+    &__toggle {
+      display: block;
+      font-size: 1.2rem;
+    }
+
+    &__list {
+      display: flex;
+      flex-direction: column;
+      row-gap: 2.5rem;
+    }
+
     &__menu {
       position: fixed;
       background-color: var(--body-color);
@@ -74,6 +107,20 @@
       padding: 3rem;
       transition: 0.4s;
     }
+
+    &__link {
+      color: var(--text-color);
+    }
+
+    &__close {
+      display: block;
+      position: absolute;
+      top: 0.75rem;
+      right: 1rem;
+      font-size: 1.5rem;
+      color: var(--title-color);
+      cursor: pointer;
+    }
   }
 }
 
@@ -83,6 +130,132 @@
   right: 0;
 }
 
+body {
+  height: 200vh;
+}
 /*-----------*/
 
-// 18:32
+/* Change background header */
+.scroll-header {
+  background-color: var(--body-color);
+  box-shadow: 0 0 4px hsla(190, 64%, 15%, 0.15);
+
+  & .nav__logo,
+  & .nav__toggle {
+    color: var(--title-color);
+  }
+}
+
+/*--------------------------*/
+
+/*-----HOME-------*/
+
+.home {
+  &__img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+    object-position: 83%;
+  }
+
+  &__container {
+    position: relative;
+    height: calc(100vh - 3rem);
+    align-content: center;
+    row-gap: 3rem;
+  }
+
+  &__data-subtitle,
+  &__data-title,
+  &__social-link,
+  &__info {
+    color: #fff;
+  }
+
+  &__data-subtitle {
+    display: block;
+    font-weight: var(--font-semi-bold);
+    margin-bottom: 0.75rem;
+  }
+
+  &__data-title {
+    font-size: 4rem;
+    font-weight: 500;
+    margin-bottom: 2.5rem;
+  }
+
+  &__social {
+    display: flex;
+    flex-direction: column;
+    row-gap: 1.5rem;
+  }
+
+  &__social-link {
+    font-size: 1.2rem;
+    width: max-content;
+  }
+
+  &__info {
+    background-color: var(--first-color);
+    display: flex;
+    padding: 1.5rem 1rem;
+    align-items: center;
+    column-gap: 0.5rem;
+    position: absolute;
+    right: 0;
+    bottom: 1rem;
+    width: 228px; //?
+  }
+
+  &__info-title {
+    display: block;
+    font-size: var(--small-font-size);
+    font-weight: var(--font-semi-bold);
+    margin-bottom: 0.75rem;
+  }
+
+  &__info-button {
+    font-size: var(--smaller-font-size);
+  }
+
+  &__info-overlay {
+    overflow: var(--img-hidden);
+  }
+
+  &__info-img {
+    width: 145px;
+    transition: var(--img-transition);
+  }
+
+  &__info-img:hover {
+    transform: var(--img-scale);
+  }
+}
+
+.button {
+  display: inline-block;
+  background-color: var(--first-color);
+  color: #fff;
+  padding: 1rem 2rem;
+  font-weight: var(--font-semi-bold);
+  transition: 0.3s;
+  &:hover {
+    background-color: var(--first-color-alt);
+  }
+  &--flex {
+    display: flex;
+    align-items: center;
+    column-gap: 0.25rem;
+  }
+
+  &--link {
+    background: none;
+    padding: 0;
+    &:hover {
+      background: none;
+    }
+  }
+}
