--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -130,9 +130,6 @@
   right: 0;
 }
 
-body {
-  height: 200vh;
-}
 /*-----------*/
 
 /* Change background header */
@@ -258,4 +255,53 @@ body {
       background: none;
     }
   }
+}
+
+/*----------------------------*/
+
+/* ABOUT */
+
+.about {
+  &__data {
+    text-align: center;
+  }
+
+  &__container {
+    row-gap: 2.5rem;
+  }
+
+  &__description {
+    margin-bottom: var(--mb-2);
+  }
+
+  &__img {
+    display: flex;
+    column-gap: 1rem;
+    align-items: center;
+    justify-content: center;
+  }
+
+  &__img0overlay {
+    overflow: hidden;
+  }
+
+  &__img-one {
+    width: 130px;
+  }
+
+  &__img-two {
+    width: 180px;
+  }
+
+  &__img-one,
+  &__img-two {
+    transition: var(--img-transition);
+    &:hover {
+      transform: var(--img-scale);
+    }
+  }
+}
+
+body {
+  height: 200vh;
 }
