--- a/src/templates/layouts/default.html
+++ b/src/templates/layouts/default.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="assets/css/style.min.css" />
     <link rel="icon" href="../../assets/images/favicon.png" />
+    <link rel="stylesheet" href="assets/css/swiper-bundle.min.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css"
       rel="stylesheet"
@@ -16,4 +17,7 @@
     {{> body }}
   </body>
   <script src="../../assets/js/main.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+  <!-- <script src="../../assets/js/components/swiper-bundle.min.js"></script>
+   -->
 </html>
