--- a/src/assets/scss/_constants.scss
+++ b/src/assets/scss/_constants.scss
@@ -3,7 +3,7 @@
 
   --first-color: hsl(190, 64%, 22%);
   --first-color-second: hsl(190, 64%, 22%);
-  --first-color-alt: hwb(190 64% 15%);
+  --first-color-alt: hsl(190 64% 15%);
   --title-color: hsl(190, 64%, 18%);
   --text-color: hsl(190, 24%, 35%);
   --text-color-light: hsl(190, 8%, 60%);
@@ -58,5 +58,3 @@
     --smaller-font-size: 0.813rem;
   }
 }
-
-
