--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -607,3 +607,83 @@ input {
     transition: 0.3s;
   }
 }
+
+/*----------FOOTER----------*/
+
+.footer {
+  &__container {
+    row-gap: 5rem;
+  }
+
+  &__content {
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+    row-gap: 2rem;
+  }
+
+  &__title,
+  &__subtitle {
+    font-size: 1rem;
+  }
+
+  &__data {
+  }
+
+  &__title {
+    margin-bottom: 0.5rem;
+    font-weight: 600;
+  }
+
+  &__description {
+    margin-bottom: 2rem;
+  }
+
+  &__social {
+    font-size: 1.25em;
+    color: var(--title-color);
+    margin-right: 1.25rem;
+  }
+
+  &__subtitle {
+    font-weight: 600;
+    margin-bottom: 1rem;
+  }
+
+  &__item {
+    margin-bottom: 0.75rem;
+  }
+
+  &__link {
+    color: var(--text-color);
+    &:hover {
+      color: var(--title-color);
+    }
+  }
+
+  &__rights {
+    display: flex;
+    flex-direction: column;
+    row-gap: 1.5rem;
+    text-align: center;
+  }
+
+  &__copy,
+  &__terms-link {
+    font-size: 0.875rem;
+    color: var(--text-color);
+  }
+
+  &__copy {
+  }
+
+  &__terms {
+    display: flex;
+    justify-content: center;
+    column-gap: 1.5rem;
+  }
+
+  &__terms-link {
+    &:hover {
+      color: var(--text-color);
+    }
+  }
+}
