--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -748,3 +748,35 @@ input {
 
 /*----------DARK LIGHT THEME---------- */
 
+.nav__dark {
+  display: flex;
+  align-items: center;
+  column-gap: 2rem;
+  position: absolute;
+  left: 3rem;
+  bottom: 4rem;
+}
+
+.change-theme,
+.change-theme-name {
+  color: var(--text-color);
+}
+
+.change-theme {
+  cursor: pointer;
+  font-size: 1rem;
+}
+
+.change-theme-name {
+  font-size: var(--small-font-size);
+}
+
+body.dark-theme {
+  --first-color-second: hsl(190, 54%, 12%);
+  --title-color: hsl(190, 24%, 95%);
+  --text-color: hsl(190, 8%, 75%);
+  --input-color: hsl(190, 29%, 16%);
+  --body-color: hsl(190, 29%, 12%);
+  --scroll-bar-color: hsl(190, 12%, 48%);
+  --scroll-thumb-color: hsl(190, 12%, 36%);
+}
