--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,6 +1,6 @@
-@import "_null";
-@import "_fonts";
-@import "_constants";
+@import "null";
+@import "fonts";
+@import "constants";
 @import "swiper-bundle.min";
 
 .container {
@@ -23,13 +23,6 @@ h3 {
   color: var(--title-color);
   font-weight: 500;
   font-family: "Raleway-Medium";
-}
-
-ul {
-  list-style: none;
-}
-a {
-  text-decoration: none;
 }
 
 img,
@@ -74,7 +67,7 @@ input {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 100;
   background-color: transparent;
 }
 
@@ -83,63 +76,28 @@ input {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 50px;
 
   &__logo,
   &__toggle {
     color: #fff;
-    cursor: pointer;
   }
 
   &__logo {
-    font-size: 20px;
     font-weight: var(--font-semi-bold);
   }
 
   &__toggle {
-    display: block;
+    cursor: pointer;
     font-size: 1.2rem;
   }
 
   &__menu {
     position: relative;
   }
-
-  &__list {
-    display: flex;
-    display: none;
-  }
-
-  &__item {
-    margin-left: 35px;
-  }
-
-  &__link {
-    text-transform: uppercase;
-  }
-
-  &__link {
-    color: #fff;
-  }
-
-  &__close {
-    display: none;
-  }
 }
 
 @media screen and (max-width: 767px) {
   .nav {
-    &__toggle {
-      display: block;
-      font-size: 1.2rem;
-    }
-
-    &__list {
-      display: flex;
-      flex-direction: column;
-      row-gap: 2.5rem;
-    }
-
     &__menu {
       position: fixed;
       background-color: var(--body-color);
@@ -152,12 +110,21 @@ input {
       transition: 0.4s;
     }
 
+    &__list {
+      display: flex;
+      flex-direction: column;
+      row-gap: 2.5rem;
+    }
+
     &__link {
-      color: var(--text-color);
+      color: var(--text-color-light);
+      text-transform: uppercase;
+      &:hover {
+        color: var(--text-color);
+      }
     }
 
     &__close {
-      display: block;
       position: absolute;
       top: 0.75rem;
       right: 1rem;
@@ -168,13 +135,13 @@ input {
   }
 }
 
-/* SHOW MENU */
+/* ----------------------SHOW MENU------------------------------*/
 
 .show-menu {
   right: 0;
 }
 
-/* Change background header */
+/* ------------------Change background header------------------ */
 .scroll-header {
   background-color: var(--body-color);
   box-shadow: 0 0 4px hsla(190, 64%, 15%, 0.15);
@@ -185,7 +152,7 @@ input {
   }
 }
 
-/* Active-link */
+/* ------------------------Active-link---------------------------- */
 
 .active-link {
   position: relative;
@@ -194,9 +161,9 @@ input {
   &::before {
     content: "";
     position: absolute;
-    background-color: var(--title-color);
+    background-color: var(--text-color-light);
     width: 100%;
-    height: 1px;
+    height: 2px;
     bottom: -0.25rem;
     left: 0;
   }
@@ -312,7 +279,7 @@ input {
   }
 }
 
-/*------- -ABOUT-------- */
+/*--------------------------ABOUT---------------------------- */
 
 .about {
   &__data {
@@ -355,7 +322,7 @@ input {
   }
 }
 
-/*------- DISCOVER------- */
+/*-------------------------- DISCOVER--------------------------- */
 
 .discover {
   &__card {
@@ -397,7 +364,7 @@ input {
   background-image: none;
 }
 
-/*----- EXPERIENCE------ */
+/*---------------------- EXPERIENCE------------------------- */
 
 .experience {
   &__container {
@@ -453,7 +420,7 @@ input {
   }
 }
 
-/*------ VIDEO------ */
+/*------------------------- VIDEO--------------------------- */
 
 .video {
   &__container {
@@ -481,7 +448,7 @@ input {
   }
 }
 
-/*-----PLACES------*/
+/*-----------------------PLACES------------------------*/
 
 .place {
   &__card,
@@ -567,7 +534,7 @@ input {
   }
 }
 
-/*-------SUBSCRIBE-------- */
+/*-----------------------SUBSCRIBE-------------------------- */
 
 .subscribe {
   &__bg {
@@ -603,7 +570,7 @@ input {
   }
 }
 
-/*-------- SPONSOR------- */
+/*----------------------- SPONSOR------------------------ */
 
 .sponsor {
   &__container {
@@ -625,7 +592,7 @@ input {
   }
 }
 
-/*----------FOOTER----------*/
+/*------------------------FOOTER-----------------------------*/
 
 .footer {
   &__container {
@@ -705,7 +672,7 @@ input {
   }
 }
 
-/*----------SCROLL UP---------- */
+/*---------------------SCROLL UP------------------------ */
 
 .scrollup {
   position: fixed;
@@ -732,7 +699,7 @@ input {
   bottom: 5rem;
 }
 
-/*----------SCROLL BAR---------- */
+/*-----------------------SCROLL BAR---------------------- */
 
 ::-webkit-scrollbar {
   width: 0.6rem;
@@ -746,7 +713,7 @@ input {
   }
 }
 
-/*----------DARK LIGHT THEME---------- */
+/*---------------------DARK LIGHT THEME--------------------- */
 
 .nav__dark {
   display: flex;
@@ -779,4 +746,337 @@ body.dark-theme {
   --body-color: hsl(190, 29%, 12%);
   --scroll-bar-color: hsl(190, 12%, 48%);
   --scroll-thumb-color: hsl(190, 12%, 36%);
+}
+
+/* --------------------MEDIA QUERIES---------------------- */
+
+// For small devices
+
+@media screen and (max-width: 340px) {
+  .place {
+    &__container {
+      grid-template-columns: max-content;
+      justify-content: center;
+    }
+  }
+
+  .experience {
+    &__content {
+      padding: 0;
+    }
+
+    &__overlay:nth-child(1) {
+      width: 190px;
+    }
+    &__overlay:nth-child(2) {
+      width: 80px;
+    }
+  }
+
+  .home {
+    &__info {
+      width: 190px;
+      padding: 1rem;
+    }
+  }
+  .expecrience__img,
+  .video__container {
+    padding: 0;
+  }
+}
+
+//For medium devices
+
+@media screen and (min-width: 568px) {
+  .video {
+    &__container {
+      display: grid;
+      grid-template-columns: 0.6fr;
+      justify-content: center;
+    }
+  }
+
+  .place {
+    &__container {
+      grid-template-columns: repeat(3, max-content);
+    }
+  }
+
+  .subscribe__form {
+    width: 470px;
+    margin: 0 auto;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  body {
+    margin: 0;
+  }
+
+  .nav {
+    height: calc(var(--header-height) + 1.5rem);
+
+    &__link {
+      color: #fff;
+      text-transform: initial;
+    }
+
+    &__link:hover {
+      color: #fff;
+    }
+
+    &__dark {
+      position: initial;
+    }
+
+    &__menu {
+      display: flex;
+      column-gap: 1rem;
+    }
+
+    &__list {
+      display: flex;
+      column-gap: 4rem;
+    }
+  }
+
+  .nav__toggle,
+  .nav__close,
+  .change-theme-name {
+    display: none;
+  }
+
+  .change-theme {
+    color: #fff;
+  }
+
+  .active-link::before {
+    background-color: #fff;
+  }
+
+  .scroll-header .nav__link {
+    color: var(--text-color);
+  }
+  .scroll-header .active-link {
+    color: var(--title-color);
+    &::before {
+      background-color: var(--title-color);
+    }
+  }
+
+  .scroll-header .change-theme {
+    color: var(--text-color);
+  }
+
+  .section {
+    padding: 7rem 0 2rem;
+  }
+
+  .home {
+    &__container {
+      height: 100vh;
+      grid-auto-rows: 1.8fr 0.5fr;
+    }
+
+    &__data {
+      align-self: flex-end;
+    }
+
+    &__social {
+      flex-direction: row;
+      align-self: flex-end;
+      margin-bottom: 3rem;
+      column-gap: 2.5rem;
+    }
+
+    &__info {
+      bottom: 3rem;
+    }
+  }
+
+  .about {
+    &__container {
+      grid-template-columns: repeat(2, 1fr);
+      align-items: center;
+    }
+
+    &__data,
+    &__title {
+      text-align: initial;
+    }
+
+    &__title {
+      margin-bottom: 1.5rem;
+    }
+
+    &__description {
+      margin-bottom: 2rem;
+    }
+  }
+
+  .discover {
+    &__container {
+      width: 410px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+  }
+
+  .discover__container,
+  .place__container {
+    padding-top: 2rem;
+  }
+
+  .experience {
+    &__overlay:nth-child(1) {
+      width: 363px;
+      margin-right: 4rem;
+    }
+
+    &__overlay:nth-child(2) {
+      width: 160px;
+    }
+  }
+
+  .subscribe {
+    &__bg {
+      background: none;
+      padding: 0;
+    }
+
+    &__container {
+      background-color: var(--first-color-second);
+      padding: 3.5rem 0;
+    }
+
+    &__input {
+      padding: 0 0.5rem;
+    }
+  }
+
+  .footer {
+    &__rights {
+      flex-direction: row;
+      justify-content: space-between;
+    }
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .container {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .home {
+    &__container {
+      grid-template-rows: 2fr 0.5fr;
+    }
+
+    &__info {
+      width: 328px;
+      grid-template-columns: 1fr 2fr;
+      column-gap: 2rem;
+    }
+
+    &__info-title {
+      font-size: 0.938rem;
+    }
+
+    &__info-img {
+      width: 240px;
+    }
+  }
+
+  .about {
+    &__img-one {
+      width: 240px;
+    }
+    &__img-two {
+      width: 290px;
+    }
+  }
+
+  .discover {
+    &__card {
+      width: 237px;
+    }
+
+    &__container {
+      width: 400px;
+    }
+
+    &__data {
+      left: 1.5rem;
+      bottom: 2rem;
+    }
+
+    &__title {
+      font-size: 2.5rem;
+    }
+  }
+
+  .experience {
+    &__content {
+      margin: 1rem 0;
+      column-gap: 3.5rem;
+    }
+
+    &__overlay:nth-child(1) {
+      width: 463px;
+      margin-right: 7rem;
+    }
+
+    &__overlay:nth-child(2) {
+      width: 220px;
+      top: 3rem;
+    }
+  }
+
+  .video {
+    &__container {
+      grid-template-columns: 0.7fr;
+    }
+
+    &__description {
+      padding: 0 8rem;
+    }
+  }
+
+  .place {
+    &__container {
+      gap: 3rem 2rem;
+    }
+
+    &__card,
+    &__img {
+      height: 263px;
+    }
+  }
+
+  .footer {
+    &__content {
+      justify-content: center;
+    }
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    max-width: 1024px;
+  }
+}
+
+@media screen and (min-height: 721px) {
+  body {
+    margin: 0;
+  }
+
+  .home {
+    &__container,
+    &__img {
+      height: 640px;
+      
+    }
+  }
 }
