--- a/src/templates/layouts/default.html
+++ b/src/templates/layouts/default.html
@@ -17,7 +17,5 @@
     {{> body }}
   </body>
   <script src="../../assets/js/main.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-  <!-- <script src="../../assets/js/components/swiper-bundle.min.js"></script>
-   -->
+  <script src="../../assets/js/components/scrollreveal.min.js"></script>
 </html>
